--- a/Books/templates/_base.html
+++ b/Books/templates/_base.html
@@ -12,6 +12,12 @@
     <style>
     h3 {color: #839AA8}
     h2 {color:#A790A1}
+    li {list-style-type: disc;};
+    body {
+          width:80%;
+          margin-left:auto;
+          margin-right:auto;};
+
 
     </style>
   </head>
