--- a/Books/templates/recommender.html
+++ b/Books/templates/recommender.html
@@ -21,7 +21,7 @@
     <div class="container" style="align-content:center">
       <div class="row row-cols-2 align-items-center">
         <div class="col">
-          <h3 style="font-size=14pt;"> You liked these books:</h3>
+          <h3 style="font-size=14pt"> You liked these books:</h3>
         </div>
         <div class="col-20">
           <span style="color:#735E6E">"{{titles[0]}}"</span> by {{titles[1]}},<br>
