--- a/Books/static/css/styles.css
+++ b/Books/static/css/styles.css
@@ -15,6 +15,16 @@
   color:#364954;
 };
 
+#intro {
+     margin-left: 200px;};
+
+
+.container_one {
+
+  justify-content: center;
+  align-items: center;
+  align-content:center;
+};
 
 .container {
             /* height: 100vh; */
@@ -23,6 +33,17 @@
             justify-content: center;
             align-items: center;
             align-content:center;
+};
+
+.intro {position:absolute;
+        left: 50%;
+
+};
+
+.ul {
+  list-style-type: disc;
+  background: #3399ff;
+  padding: 20px;
 };
 
 .friend_image {
@@ -37,16 +58,11 @@ p {color: #FFE4F8};
 
 h3 {color: #6CB3B7;};
 
-ul {
+/* ul {
   background: #ff9999;
   padding: 20px;
-};
+}; */
 
-ul li {
-  list-style-type: circle;
-  background: #3399ff;
-  padding: 20px;
-};
 
 
 .submit-button {margin-top: 10px;};
