--- a/Books/templates/index.html
+++ b/Books/templates/index.html
@@ -10,29 +10,31 @@
 
   <body> -->
   <!-- <div class="jumbotron"> -->
-  <div class="container">
+  <!-- <div class="container"> -->
+    <div id="intro" style="width:400px; margin:auto">
 
     <br><br>
-    <h3>This is your</h3>
+    <h3 style="text-align: center">This is your</h3>
     <!-- <img class = "inotr-image" src="static/image/...png" alt=""> -->
     <!-- alt= hidden info for image (for: crawler, blind people, ...) -->
     <br>
-    <h1> Friendly Book Advice</h1>
+    <h1 style="text-align: center"> Friendly Book Advice</h1>
     <br><br><br>
 
-    <form action='/recommender' method='get'>
+    <form action='/recommender' method='get' style="text-align:center">
       <p style="font-size:14pt">Which books do you love?</p>
         <input type="text" name="book1" placeholder="Enter a book title">
         <br><p></p>
         <input type="text" name="book2"  placeholder="Enter a book title">
         <br><p></p>
         <input type="text" name="book3"  placeholder="Enter a book title">
-        <br>
+        <br><br>
       <input type="submit" value="What should I read next?" class="submit-button">
     </form>
-    <br><br><br>
+    <br><br>
 <img class ="friend_image" src="/static/images/intro.jpg" alt="friend" width="500vh";>
   </div>
+  <!-- </div> -->
 
   {% endblock %}
   <!-- </body>
