fixed sim model

--- a/Books/templates/best.html
+++ b/Books/templates/best.html
@@ -3,6 +3,10 @@
 <!-- align-items-left -->
 <!-- row-cols-2  -->
 <br><br>
+<div class="alert alert-primary" role="alert" style="color:#839AA8">
+
+</div>
+<br><br>
   <div class="container" style="align-content:center">
     <div class="row justify-content-around">
       <div class="col">
@@ -37,5 +41,9 @@
     <img class ="friend_image" src="/static/images/dog.jpg" alt="dog" width="500vh">
       </div>
   </div>
+</div>
+<br><br>
+<div class="alert alert-primary" role="alert" style="color:#839AA8">
+
 </div>
   {% endblock %}
