--- a/Books/templates/index.html
+++ b/Books/templates/index.html
@@ -34,6 +34,8 @@
     <br><br>
 <img class ="friend_image" src="/static/images/intro.jpg" alt="friend" width="500vh";>
   </div>
+  
+</div>
   <!-- </div> -->
 
   {% endblock %}
