--- a/Books/templates/recommender.html
+++ b/Books/templates/recommender.html
@@ -17,7 +17,7 @@
 
         </p>
     </div> -->
-
+<br><br>
     <div class="container" style="align-content:center">
       <div class="row row-cols-2 align-items-center">
         <div class="col">
@@ -26,19 +26,22 @@
         <div class="col-20">
           <span style="color:#735E6E">"{{titles[0]}}"</span> by {{titles[1]}},<br>
           <span style="color:#735E6E">"{{titles[2]}}"</span> by {{titles[3]}} and <br>
-          <span style="color:#735E6E">"{{titles[3]}}"</span> by {{titles[5]}}<br>
+          <span style="color:#735E6E">"{{titles[4]}}"</span> by {{titles[5]}}<br>
         </div>
 
       </div>
     </div>
+    <br><br><br>
+    <div class="alert alert-primary" role="alert" style="color:#839AA8">
 
-  <br><br><br><br>
+    </div>
+  <br><br><br>
 
   <div class="container">
     <div class="row align-items-center">
       <div class="col-sm">
 
-        <h3> Your friend who reads many popular books would recommend these ones:</h3>
+        <h3> Your friend who reads many popular books would recommend these ones:</h3><br>
           <p><span style="color:#735E6E">{{recommendations[0]}}</span> by {{recommendations[1]}}</p>
           <p><span style="color:#735E6E">{{recommendations[2]}}</span> by {{recommendations[3]}}</p>
           <p><span style="color:#735E6E">{{recommendations[4]}}</span> by {{recommendations[5]}}</p>
@@ -52,7 +55,11 @@
     </div>
   </div>
 
-<br><br>
+<br><br><br><br>
+<div class="alert alert-primary" role="alert">
+
+</div>
+<br><br><br>
 
 <div class="container">
   <div class="row align-items-center">
@@ -61,7 +68,7 @@
       <br><br><br><br>
     </div>
     <div class="col-sm">
-      <h3>Your friend who reads a lot of lesser-known books thinks you'd maybe like these:</h3>
+      <h3>Your friend who reads a lot of lesser-known books thinks you'd maybe like these:</h3><br>
       <p><span style="color:#735E6E">{{recommendations_lol[0][0]}}</span>  by {{recommendations_lol[0][1]}}</p>
       <p><span style="color:#735E6E">{{recommendations_lol[0][2]}}</span>  by {{recommendations_lol[0][3]}}</p>
       <p><span style="color:#735E6E">{{recommendations_lol[1][0]}}</span>  by {{recommendations_lol[1][1]}}</p>
@@ -73,8 +80,10 @@
 
   </div>
 </div>
+<br><br>
+<div class="alert alert-primary" role="alert">
 
-
+</div>
 
   {% endblock %}
 <!-- </html> -->
