--- a/Books/templates/best.html
+++ b/Books/templates/best.html
@@ -2,16 +2,17 @@
 {% block content %}
 <!-- align-items-left -->
 <!-- row-cols-2  -->
-<br><br>
-<div class="alert alert-primary" role="alert" style="color:#839AA8">
 
-</div>
+<!-- <div class="alert alert-primary" role="alert" style="color:#839AA8"> -->
+
+<!-- </div> -->
+<div>
 <br><br>
-  <div class="container" style="align-content:center">
+  <div class="container">
     <div class="row justify-content-around">
       <div class="col">
-          <br><br><br>
-          <h3> The books people liked the most of all:</h3><br>
+
+          <h3> <br><br>The books people liked the most of all:</h3><br>
           <ul>
               <li>{{top_25[0]}} by {{top_25[1]}}</li>
               <li>{{top_25[2]}} by {{top_25[3]}}</li>
@@ -43,7 +44,8 @@
   </div>
 </div>
 <br><br>
-<div class="alert alert-primary" role="alert" style="color:#839AA8">
-
 </div>
+<!-- <div class="alert alert-primary" role="alert" style="color:#839AA8"> -->
+
+<!-- </div> -->
   {% endblock %}
