--- a/Books/templates/index.html
+++ b/Books/templates/index.html
@@ -1,22 +1,10 @@
 {% extends "_base.html" %}
 {% block content %}
-<!-- <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>BOOK RECOMMENDER</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
-  </head>
 
-  <body> -->
-  <!-- <div class="jumbotron"> -->
-  <!-- <div class="container"> -->
-    <div id="intro" style="width:400px; margin:auto">
-
+    <div>
+    <!-- <div style="width:400px; margin:auto; background-color: #9ea5af;"> -->
     <br><br>
     <h3 style="text-align: center">This is your</h3>
-    <!-- <img class = "inotr-image" src="static/image/...png" alt=""> -->
-    <!-- alt= hidden info for image (for: crawler, blind people, ...) -->
     <br>
     <h1 style="text-align: center"> Friendly Book Advice</h1>
     <br><br><br>
@@ -32,9 +20,9 @@
       <input type="submit" value="What should I read next?" class="submit-button">
     </form>
     <br><br>
-<img class ="friend_image" src="/static/images/intro.jpg" alt="friend" width="500vh";>
+<img class ="friend_image" src="/static/images/intro.jpg" alt="friend">
   </div>
-  
+
 </div>
   <!-- </div> -->
 
