fixed duplicate din models, updated Readme

--- a/Books/templates/_base.html
+++ b/Books/templates/_base.html
@@ -14,13 +14,10 @@
   <body>
 <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link active" href="/index" style="color:#364954" >Start</a>
+    <a class="nav-link active" href="/index" style="color:#364954" >RECOMMENDATIONS</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/recommender" style="color:#364954">Recommendations</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/best" style="color:#364954">Best-rated Books</a>
+    <a class="nav-link" href="/best" style="color:#364954">BEST-RATED BOOKS</a>
   </li>
 </ul>
 
