--- a/Books/static/css/styles.css
+++ b/Books/static/css/styles.css
@@ -38,8 +38,12 @@
   /* align-items: left; */
 }
 
+.col li {list-style-type: None;
+          padding-bottom: 7px;}
+.col li span {font-weight: bold;}
+
 .ul {
-  list-style-type: disc;
+  list-style-type: None;
   background: #3399ff;
   padding: 20px;
 }
@@ -55,12 +59,22 @@ font-weight: bold;
 }
 
 /* p {color: #FFE4F8;} */
-
+h1 {color: #b58851;}
 h3 {color: #b58851;}
 h2 {color: #b58851;}
 li {list-style-type: disc;}
 
-.submit-button {margin-top: 10px;}
+.submit-button {
+  margin-top: 10px;
+  background-color:#b58851;
+  border: 1px solid #364954;
+}
+
+input[type=text] {
+  background-color: #b1b7bf;
+  border: 1px solid #364954;
+}
+
 
 #given {
   display: flex;
@@ -71,3 +85,10 @@ li {list-style-type: disc;}
 }
 
 #words {color: blue;}
+
+.nav-item {
+  list-style-type: none;
+  font-size: 20px;
+  /* font-weight: bold; */
+  /* margin-top: 15px; */
+}
